# DISCO-DJ

./: .gitignore  CMakeLists.txt  README.md  demo.py  disco_dj_1d_derivative_example.ipynb  disco_dj_2d_example.ipynb  disco_dj_3d_example.ipynb  pyproject.toml
docs/: conf.py  index.rst  modules.rst  notebooks.rst
docs/notebooks/: disco_dj_1d_derivative_example.ipynb  disco_dj_1d_example.ipynb  disco_dj_2d_example.ipynb  disco_dj_3d_example.ipynb
src/discodj/: __init__.py  disco_dj.py
src/discodj/core/: disco_nufft.py  grids.py  io.py  kernels.py  scatter_and_gather.py  summary_statistics.py  types.py  utils.py
src/discodj/cosmology/: cosmo_utils.py  cosmology.py  predefined_cosmologies.py  transfer_functions.py
src/discodj/data/: camels.py  gadget.py  quijote.py
src/discodj/ics/: grf.py  plane_wave.py
src/discodj/lpt/: nlpt.py  nlpt_1d.py  nlpt_2d.py  nlpt_3d_jax.py
src/discodj/nbody/: acc.py  nbody_scan_functions.py
src/discodj/nbody/steppers/: disco_stepper.py  dkd_leapfrog.py  dkd_pi_integrator.py  dkd_symplectic_integrator.py  leapfrog_adjoint.py
src/discodj/ppt/: ppt.py
src/discodj_demo/: discodj_demo.py
src/discodj_native/: __init__.py  _disco_dj.cc  grf_generators.cc  treeshortrange_2d.cc  treeshortrange_3d.cc
